# ocr-microservice

./: .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  pyproject.toml  revert-cloudflare-tunnel.ps1  settings.gradle.kts  setup-cloudflare-tunnel.ps1
app/: config.py  main.py  models.py  service.py
app/engines/: base.py  doctr_engine.py  easyocr_engine.py  ollama.py  paddle_engine.py  surya.py  tesseract.py
app/insight/: analyzer.py
docs/: OCR_DESIGN.md
src/main/kotlin/com/ocr/: OcrApplication.kt  OcrController.kt  OcrProvider.kt  OllamaOcrService.kt  OpenApiConfig.kt  TesseractService.kt  WebConfig.kt
src/main/kotlin/com/ocr/config/: OcrProperties.kt
src/main/kotlin/com/ocr/engine/: HybridOcrEngine.kt
src/main/kotlin/com/ocr/engine/client/: OllamaClient.kt
src/main/kotlin/com/ocr/engine/stage1/: MrzExtractor.kt  PdfRenderer.kt  TextExtractor.kt
src/main/kotlin/com/ocr/engine/stage2/: DocumentClassifier.kt  LlmClassifier.kt  RuleBasedClassifier.kt
src/main/kotlin/com/ocr/engine/stage3/: PromptRegistry.kt
src/main/kotlin/com/ocr/engine/stage4/: VisionExtractor.kt
src/main/kotlin/com/ocr/engine/stage5/: ResultValidator.kt
src/main/kotlin/com/ocr/model/: DocumentType.kt  ExtractionContext.kt  Mrz.kt  OcrEnvelope.kt
src/main/kotlin/com/ocr/util/: PipelineLogger.kt
src/main/resources/: application.properties  logback-spring.xml
src/test/kotlin/com/ocr/engine/stage1/: MrzExtractorTest.kt
